--- a/src/DatabaseExplainer/DatabaseExplainer/DatabaseExplainer/DatabaseExplainer.csproj
+++ b/src/DatabaseExplainer/DatabaseExplainer/DatabaseExplainer/DatabaseExplainer.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MudBlazor" Version="6.19.1" />
     <ProjectReference Include="..\..\DatabaseExplainer.ServiceDefaults\DatabaseExplainer.ServiceDefaults.csproj" />
     <ProjectReference Include="..\DatabaseExplainer.Client\DatabaseExplainer.Client.csproj" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="8.0.4" />
